# verifier_primacy

./: .gitattributes  CLAUDE.md  README.md  RESTRUCTURE_PLAN.md  cli_agent.py  demo_mlx.py  logprobs_output.json  marketplace.json  pyproject.toml  verifier.py
.claude/: CLAUDE.md  settings.json
.claude/agents/: benchmarker.md  docs-writer.md  logprobs-analyst.md  reviewer.md
.claude/commands/: bench.md  demo.md  logprobs.md  release.md  test.md
.claude/rules/: mlx-backend.md  tests.md  vllm-backend.md
app/: __init__.py  streamlit_app.py
examples/: basic_extraction.py  logprobs_explorer.py
experiments_results/: 001_eney_tool_call_hallucination.md
notebooks/: inference_explorer.ipynb  tool_call_trace.ipynb
scripts/: logprobs_cli.py  migrate_structure.py
skills/logprobs/: SKILL.md
src/verifier_primacy/: __init__.py
src/verifier_primacy/backends/: __init__.py  mlx_backend.py
src/verifier_primacy/core/: __init__.py  confidence.py  primitives.py  routing.py  verifier.py  vocab.py
src/verifier_primacy/logprobs/: __init__.py  boundaries.py  explorer.py  formatters.py  inspector.py  models.py
src/verifier_primacy/rules/: __init__.py
style_verifier/: README.md  __init__.py  advanced_masking.py  app.py  banned.txt  banned_tokens.json  branch_explorer.py  build_token_maps.py  categories.py  generate.py  logit_viewer.py  outputs.txt  pattern_matcher.py  patterns.py  style_redirect.py  style_verifier.py  test.sh  token_maps.json  tokenize_bans.py
tests/: conftest.py  test_confidence.py  test_logprobs_explorer.py  test_logprobs_models.py
