[project]
name = "verifier-primacy"
version = "0.1.0"
description = "Constrained decoding via logit-level rule verification for open-weight LLMs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andrew Batutin", email = "andrew@example.com" }]
requires-python = ">=3.11,<4.0"
keywords = [
    "llm",
    "verification",
    "constrained-decoding",
    "structured-output",
    "logits",
    "mlx",
    "vllm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.5.0",
    "mlx-lm>=0.5.0",
]
vllm = [
    "vllm>=0.4.0",
    "torch>=2.0.0",
]
rich = [
    "rich>=13.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "verifier-primacy[mlx,vllm,rich,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/andrewBatutin/verifier_primacy"
Documentation = "https://github.com/andrewBatutin/verifier_primacy#readme"
Repository = "https://github.com/andrewBatutin/verifier_primacy"
Issues = "https://github.com/andrewBatutin/verifier_primacy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verifier_primacy"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["verifier_primacy"]

[tool.pyright]
include = ["src/verifier_primacy"]
exclude = ["**/node_modules", "**/__pycache__", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "mlx: requires MLX (Apple Silicon)",
    "vllm: requires vLLM (CUDA)",
]
